fix: styling issues and bootstrap overlap

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -2,15 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-#inter-standard {
-  font-family: "Inter", sans-serif;
-  font-optical-sizing: auto;
-  font-weight: 400;
-  font-style: normal;
-  font-variation-settings:
-    "slnt" 0;
-}
-
 body {
   font-family: 'Inter', sans-serif;
 }
